--- a/public/output.css
+++ b/public/output.css
@@ -632,6 +632,14 @@ video {
   margin-top: 6rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
+}
+
 .flex{
   display: flex;
 }
