--- a/public/output.css
+++ b/public/output.css
@@ -749,6 +749,14 @@ video {
   padding: 1.5rem;
 }
 
+.p-1{
+  padding: 0.25rem;
+}
+
+.p-14{
+  padding: 3.5rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -778,6 +786,26 @@ video {
   padding-top: 1rem;
 }
 
+.pb-6{
+  padding-bottom: 1.5rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -802,12 +830,25 @@ video {
   line-height: 1rem;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
 .font-medium{
   font-weight: 500;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.font-extralight{
+  font-weight: 200;
 }
 
 .underline{
