--- a/public/output.css
+++ b/public/output.css
@@ -1020,25 +1020,15 @@ a, button{
 }
 
 .nav .nav__action__links .language .lang-icon{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 0.725rem;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
 }
 
-.nav .nav__action__links .language .english{
-  background-image: linear-gradient(50deg, blue 30%, hsl(0, 0%, 95%) 50%, red 40%);
-}
-
-.nav .nav__action__links .language .polish{
-  background-image: linear-gradient(20deg, rgb(221, 70, 70) 40%, hsl(0, 6%, 57%) 45%);
-  /* background-image: linear-gradient(20deg, rgb(221, 70, 70) 40%, white 45%); */
-}
-
-.nav .nav__action__links .language .german{
-  background-image: linear-gradient(0deg, gold 40%, red 55%, black 20%);
-}
+/* .nav .nav__action__links .language .german{
+    background-image: linear-gradient(0deg, gold 40%, red 55%, black 20%);
+} */
 
 .nav .nav__social__links .mobile a,
 .nav .nav__social__links .mobile button{
