--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -167,6 +167,9 @@ a, button{
     background-clip: text;
     color: transparent;
 }
+.nav .nav__action__links .language .polish{
+    background-image: linear-gradient(25deg, red 30%, rgba(212, 212, 212, 0.845) 45%);
+}
 /* .nav .nav__action__links .language .german{
     background-image: linear-gradient(0deg, gold 40%, red 55%, black 20%);
 } */
