--- a/public/output.css
+++ b/public/output.css
@@ -624,6 +624,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .ml-1{
   margin-left: 0.25rem;
 }
@@ -648,32 +652,16 @@ video {
   margin-top: 3rem;
 }
 
+.mt-14{
+  margin-top: 3.5rem;
+}
+
 .mt-20{
   margin-top: 5rem;
 }
 
 .mt-8{
   margin-top: 2rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
-}
-
-.mt-14{
-  margin-top: 3.5rem;
-}
-
-.mb-1{
-  margin-bottom: 0.25rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
 }
 
 .inline-block{
@@ -696,12 +684,20 @@ video {
   height: 2.75rem;
 }
 
+.h-12{
+  height: 3rem;
+}
+
 .h-14{
   height: 3.5rem;
 }
 
 .h-20{
   height: 5rem;
+}
+
+.h-24{
+  height: 6rem;
 }
 
 .h-40{
@@ -718,6 +714,10 @@ video {
 
 .w-20{
   width: 5rem;
+}
+
+.w-24{
+  width: 6rem;
 }
 
 .w-28{
@@ -1051,7 +1051,7 @@ a, button{
   -webkit-text-stroke-width: 0.03rem;
 }
 
-.gradient-text {
+.gradient-text{
   background-image: linear-gradient(90deg, var(--first-color) 46%, hsl(0, 0%, 67%));
   -webkit-background-clip: text;
   background-clip: text;
@@ -1176,14 +1176,36 @@ a, button{
 
 .services .title{
   background-color: var(--white-color);
-  width: 7.625rem;
-  height: 3rem;
   transform: translate(-15px, -15px) rotate(-10deg);
 }
 
-/* .services .serv-con{
-    
+.services .serv-con .info{
+  font-size: 0.875rem;
+}
+
+/* ============== CONTACT SECTION ============== */
+
+.contact .heading .title{
+  font-size: 1.9rem;
+}
+
+/* .contact .heading{
+    background-color: red;
+}
+.contact .actions{
+    background-color: blue;
 } */
+
+.contact .actions a{
+  background-color: var(--first-color);
+  color: var(--white-color);
+}
+
+.contact .actions a:nth-child(2){
+  background-color: var(--white-color);
+  color: var(--first-color);
+  border: 0.25rem solid rgba(213, 213, 213, 0.892);
+}
 
 /* ============== MEDIA QUERIES ============== */
 
@@ -1207,6 +1229,8 @@ a, button{
 @media screen and (max-width: 71.875rem) {
   /*--Ipad Air: 1150px--*/
 
+  /* --nav-- */
+
   .nav{
     width: 100%;
   }
@@ -1215,8 +1239,16 @@ a, button{
     border: none;
   }
 
+  /* --home-- */
+
   .home .content .info{
     font-size: 2.25rem;
+  }
+
+  /* --services-- */
+
+  .services .serv-con{
+    flex-direction: column;
   }
 }
 
@@ -1312,6 +1344,20 @@ a, button{
 
   .services .serv-con{
     flex-direction: column;
+  }
+
+  .services .serv-con .info{
+    font-size: 0.7875rem;
+  }
+
+  /* --contact-- */
+
+  .contact .heading .image-container{
+    border-top: 0.046975rem solid rgba(173, 173, 173, 0.279);
+    width: 7.25rem;
+    height: 7.25rem;
+    background-image: linear-gradient(180deg, hsl(0, 0%, 73%), #f2f2f2 90%);
+    /* background-image: linear-gradient(180deg, hsl(50, 8%, 72%), #eae8e1 90%); */
   }
 }
 
