--- a/public/output.css
+++ b/public/output.css
@@ -712,6 +712,18 @@ video {
   height: 10rem;
 }
 
+.h-1{
+  height: 0.25rem;
+}
+
+.h-9{
+  height: 2.25rem;
+}
+
+.h-8{
+  height: 2rem;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -742,6 +754,14 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-9{
+  width: 2.25rem;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .flex-col{
@@ -1212,7 +1232,7 @@ a, button{
 .contact .actions a:nth-child(2){
   background-color: var(--white-color);
   color: var(--first-color);
-  border: 0.25rem solid rgba(215, 215, 215, 0.61);
+  border: 0.25rem solid rgba(215, 215, 215, 0.447);
 }
 
 /* ============== MEDIA QUERIES ============== */
